# geometry

./: CMakeLists.txt  main.cpp  readme.html  readme.md
bash/: cmake.bash  install.bash  makerun.bash  test.bash
docs/: Doxyfile  belongs.emmx  rel  struct.emmx
docs/html/: annotated.html  classes.html  classns__geo_1_1_geometry-members.html  classns__geo_1_1_geometry.html  classns__geo_1_1_geometry__inherit__graph.map  classns__geo_1_1_geometry__inherit__graph.md5  classns__geo_1_1_kd_tree-members.html  classns__geo_1_1_kd_tree.html  classns__geo_1_1_kd_tree2-members.html  classns__geo_1_1_kd_tree2.html  classns__geo_1_1_kd_tree2__coll__graph.map  classns__geo_1_1_kd_tree2__coll__graph.md5  classns__geo_1_1_kd_tree2__inherit__graph.map  classns__geo_1_1_kd_tree2__inherit__graph.md5  classns__geo_1_1_kd_tree3-members.html  classns__geo_1_1_kd_tree3.html  classns__geo_1_1_kd_tree3__coll__graph.map  classns__geo_1_1_kd_tree3__coll__graph.md5  classns__geo_1_1_kd_tree3__inherit__graph.map  classns__geo_1_1_kd_tree3__inherit__graph.md5  classns__geo_1_1_line2.html  (+162 more)
include/: kdtree.hpp  line.hpp  linestring.hpp  point.h  point.hpp  polygon.hpp  rectangle.hpp  triangle.hpp  utility.hpp
output/: kdtree.cpp  point2.txt  point3.txt  pointset.csv  refpointset.csv  refpointset2.csv  refpointset3.csv
src/: CMakeLists.txt  handler.cpp  main.cpp  point.cpp
test/: CMakeLists.txt  testMain.cpp
test/include/: helper.h  testCircle.h  testKdtree.h  testLine.h  testLinestring.h  testOstream.h  testPoint.h  testPolygon.h  testRectangle.h  testSLine.h  testTriangle.h  testUtility.h
(+155 files in other folders)
